// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StartGame /> does not render board when no snapshot 1`] = `
<Stack
  alignItems="center"
  marginTop="50px"
  spacing={8}
>
  <Stack>
    <Heading
      as="h1"
      textAlign="center"
    >
      gameName
    </Heading>
  </Stack>
  <HStack
    alignItems="start"
    spacing={8}
  >
    <PlayerList />
  </HStack>
</Stack>
`;

exports[`<StartGame /> renders game boards when snapshot is present 1`] = `
<Stack
  alignItems="center"
  marginTop="50px"
  spacing={8}
>
  <Stack>
    <Heading
      as="h1"
      textAlign="center"
    >
      gameName
    </Heading>
  </Stack>
  <HStack
    alignItems="start"
    spacing={8}
  >
    <PlayerList />
    <Stack>
      <Text
        textAlign="center"
      >
        Here are the boards from that round:
      </Text>
      <OpponentBoardPreview
        includeCurrentPlayer={true}
        initialPlayerIndex={0}
        players={
          [
            {
              "board": [
                [
                  null,
                ],
              ],
              "gamesWon": 0,
              "hand": [],
              "isAdmin": false,
              "isReady": false,
              "isTopBanana": true,
              "userId": "123",
              "username": "username",
            },
          ]
        }
      />
    </Stack>
  </HStack>
</Stack>
`;
